[refs #74884] Fix space before content on small screens.

--- a/docs/Redesign Docs/RedesignTheme/css/styles.scss
+++ b/docs/Redesign Docs/RedesignTheme/css/styles.scss
@@ -696,3 +696,13 @@ article {
     margin-bottom: $dim2;
   }
 }
+
+
+// MOBILE and responsivity fixes ======================================
+@media (max-width: 700px) {
+  #content-section.simple-page {
+    top: $dim12 + $dim12;
+    position: relative;
+    z-index: 2 !important;
+  }
+}
