--- a/docs/Redesign Docs/RedesignTheme/public/css/app.css
+++ b/docs/Redesign Docs/RedesignTheme/public/css/app.css
@@ -6696,3 +6696,9 @@ article img {
   max-width: 100%;
   margin-top: 6px;
   margin-bottom: 6px; }
+
+@media (max-width: 700px) {
+  #content-section.simple-page {
+    top: 394px;
+    position: relative;
+    z-index: 2 !important; } }
